# c0check

./: Cargo.toml  README.md
src/: checker.rs  discover_tests.rs  executer.rs  implementations.rs  launcher.rs  main.rs  options.rs  parse_spec.rs  run_cc0.rs  spec.rs
