[package]
name = "c0check"
version = "1.0.0"
authors = ["Ishan Bhargava"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
logos = "0.11.4"
nix = "0.19.0"
rayon = "1.5"
indicatif = {version = "0.15.0", features = ["rayon"]}
lazy_static = "1.4.0"
anyhow = "1.0"
thiserror = "1.0.23"
