[package]
name = "c0check"
version = "1.0.0"
authors = ["Ishan Bhargava"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
# Lexing
logos = "0.11.4"
# POSIX APIs
nix = "0.19.0"
# Easy parallelism
rayon = "1.5"
# Command line options parsing
structopt = "0.3"
# Error handling
anyhow = "1.0"
# Error type creation
thiserror = "1.0.23"
